profilelist1exp/unpackaged/objects/Referral_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referral Leads</relationshipLabel>
        <relationshipName>Referral_Leads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Boomi_Lead_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Boomi Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boomi_Lead_Status__c</fullName>
        <inlineHelpText>This status is automatically updated based on the lead&apos;s progress</inlineHelpText>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Closed - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Disqualified-Duplicate</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Opportunity Lost</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Qualified - Future Opportunity</fullName>
                </value>
                <value>
                    <fullName>Qualified –Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Qualified – Opportunity Won</fullName>
                </value>
                <value>
                    <fullName>Transferred to Boomi</fullName>
                </value>
                <value>
                    <fullName>Transferred to SecureWorks</fullName>
                </value>
                <value>
                    <fullName>Transferred to SEP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_allocated_for_this_initiative__c</fullName>
        <inlineHelpText>Please tell us if you have been able to verify that they have allocated budget for this project</inlineHelpText>
        <label>Budget allocated for this  initiative?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Dell_Boomi_contact_customer__c</fullName>
        <inlineHelpText>Would it be OK if a Dell | Boomi sales representative contacts the customer?</inlineHelpText>
        <label>Can Dell/Boomi contact customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Dell_Secureworks_contact_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this field if you have spoken to the contact and they are expecting to be contacted by a security specialist.</inlineHelpText>
        <label>Can Dell/Secureworks contact customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Delivery_Method_Area_of_Interest__c</fullName>
        <label>Cloud Delivery Method Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the Contact from the Account. If the Contact doesn&apos;t exist, then create the Contact for this Account and then select it for this Lead</inlineHelpText>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referral Leads</relationshipLabel>
        <relationshipName>Referral_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Future_Integration_Description__c</fullName>
        <inlineHelpText>Does the customer do the integration between the applications in house or do they use a specific integration solution?</inlineHelpText>
        <label>Current/Future Integration Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Future_Integration_Initiatives__c</fullName>
        <inlineHelpText>Does the customer have any current or upcoming initiatives or projects related to applications and integrating them?</inlineHelpText>
        <label>Current/Future Integration Initiatives?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Security_Providers__c</fullName>
        <label>Current Security Providers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Verisign</fullName>
                </value>
                <value>
                    <fullName>Cybertrust</fullName>
                </value>
                <value>
                    <fullName>Solutionary</fullName>
                </value>
                <value>
                    <fullName>Counterpane</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Security_Technologies__c</fullName>
        <label>Current Security Technologies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Firewall</fullName>
                </value>
                <value>
                    <fullName>Intrusion Prevention</fullName>
                </value>
                <value>
                    <fullName>Intrusion Detection</fullName>
                </value>
                <value>
                    <fullName>SIM</fullName>
                </value>
                <value>
                    <fullName>SIEM</fullName>
                </value>
                <value>
                    <fullName>Unified Threat Management device (UTM)</fullName>
                </value>
                <value>
                    <fullName>Virtual Private Network (VPN)</fullName>
                </value>
                <value>
                    <fullName>Network Anti-Virus</fullName>
                </value>
                <value>
                    <fullName>End Point Anti-Virus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_AE_Name__c</fullName>
        <inlineHelpText>This field is automatically pulled from the Account, please don&apos;t change this value</inlineHelpText>
        <label>Dell AE Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Affinity_ID__c</fullName>
        <formula>Account__r.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Affinity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_ISR_Name__c</fullName>
        <inlineHelpText>This field is automatically pulled from the Account, please don&apos;t change this value</inlineHelpText>
        <label>Dell ISR Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Rep_Badge__c</fullName>
        <formula>CreatedBy.Badge_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Rep Badge #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Rep_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Rep_Name__c</fullName>
        <formula>CreatedBy.LastName &amp; &quot;,&quot; &amp; CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Rep_Phone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <inlineHelpText>Please let us know who will authorize the funds, and/or ultimately approve this initiative</inlineHelpText>
        <label>Economic Buyer?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <inlineHelpText>Please let us know of any budget numbers that your customer may have shared with you regarding this project, and/or tell us if your customer has provided an estimated number of users that will need to access the system</inlineHelpText>
        <label>Estimated  Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Contact__r.FirstName &amp;  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Description__c</fullName>
        <label>Integration Error Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Solution__c</fullName>
        <inlineHelpText>Does the customer do the integration between the applications in house or do they use a specific integration solution?</inlineHelpText>
        <label>Integration Solution?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inhouse</fullName>
                </value>
                <value>
                    <fullName>External Solution</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Function_Role__c</fullName>
        <formula>TEXT(Contact__r.Job_Function_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Function Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Country__c</fullName>
        <inlineHelpText>Select the Country of the Lead</inlineHelpText>
        <label>Lead Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNITED STATES</fullName>
                    <default>true</default>
                    <label>UNITED STATES</label>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_State__c</fullName>
        <inlineHelpText>Select the State of the Lead if the location is United States. For Other Countries, this is a read only field</inlineHelpText>
        <label>Lead State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama: AL</fullName>
                </value>
                <value>
                    <fullName>Alaska: AK</fullName>
                </value>
                <value>
                    <fullName>Arizona: AZ</fullName>
                </value>
                <value>
                    <fullName>Arkansas: AR</fullName>
                </value>
                <value>
                    <fullName>California: CA</fullName>
                </value>
                <value>
                    <fullName>Colorado: CO</fullName>
                </value>
                <value>
                    <fullName>Connecticut: CT</fullName>
                </value>
                <value>
                    <fullName>Delaware: DE</fullName>
                </value>
                <value>
                    <fullName>Florida: FL</fullName>
                </value>
                <value>
                    <fullName>Georgia: GA</fullName>
                </value>
                <value>
                    <fullName>Hawaii: HI</fullName>
                </value>
                <value>
                    <fullName>Idaho: ID</fullName>
                </value>
                <value>
                    <fullName>Illinois: IL</fullName>
                </value>
                <value>
                    <fullName>Indiana: IN</fullName>
                </value>
                <value>
                    <fullName>Iowa: IA</fullName>
                </value>
                <value>
                    <fullName>Kansas: KS</fullName>
                </value>
                <value>
                    <fullName>Kentucky: KY</fullName>
                </value>
                <value>
                    <fullName>Louisiana: LA</fullName>
                </value>
                <value>
                    <fullName>Maine: ME</fullName>
                </value>
                <value>
                    <fullName>Maryland: MD</fullName>
                </value>
                <value>
                    <fullName>Massachusetts: MA</fullName>
                </value>
                <value>
                    <fullName>Michigan: MI</fullName>
                </value>
                <value>
                    <fullName>Minnesota: MN</fullName>
                </value>
                <value>
                    <fullName>Mississippi: MS</fullName>
                </value>
                <value>
                    <fullName>Missouri: MO</fullName>
                </value>
                <value>
                    <fullName>Montana: MT</fullName>
                </value>
                <value>
                    <fullName>Nebraska: NE</fullName>
                </value>
                <value>
                    <fullName>Nevada: NV</fullName>
                </value>
                <value>
                    <fullName>New Hampshire: NH</fullName>
                </value>
                <value>
                    <fullName>New Jersey: NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_ZIP_Postal_Code__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing ZIP/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_for_Integration_Description__c</fullName>
        <inlineHelpText>Does the customer have any current or upcoming initiatives or projects related to applications and integrating them?</inlineHelpText>
        <label>Need for Integration Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs__c</fullName>
        <inlineHelpText>Please tell us about any other specific needs and/ or requests that your customer might have</inlineHelpText>
        <label>Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Please tell us about any active competition, and/or competing initiatives, or politics that we might encounter, or anything else that you feel that we should know before we contact your customer</inlineHelpText>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Package_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates that the prospect has committed to purchase a Dell SecureWorks IPS or Pen Test Bundle and is ready for immediate closing without further nurturing by Dell SecureWorks</inlineHelpText>
        <label>Package Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <label>Primary Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce.com</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com &amp; Boomi</fullName>
                </value>
                <value>
                    <fullName>EchoSign e-signature - by Adobe</fullName>
                </value>
                <value>
                    <fullName>Conga Composer</fullName>
                </value>
                <value>
                    <fullName>Storage as a Service (StaaS)</fullName>
                </value>
                <value>
                    <fullName>Marketing Automation</fullName>
                </value>
                <value>
                    <fullName>Dell Cloud On Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Timeframe__c</fullName>
        <inlineHelpText>Please tell us approximately when your customer wants to make a selection and implement a solution. Possible Answer: a specific date, or immediately, next 30 days, in this quarter, over the next six months, or next year</inlineHelpText>
        <label>Purchase Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>12+ months</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>No Timeframe</fullName>
                </value>
                <value>
                    <fullName>0-1 month</fullName>
                </value>
                <value>
                    <fullName>1-3 months</fullName>
                </value>
                <value>
                    <fullName>4-6 months</fullName>
                </value>
                <value>
                    <fullName>7-9 months</fullName>
                </value>
                <value>
                    <fullName>10-12 months</fullName>
                </value>
                <value>
                    <fullName>13-24 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_not_contacting__c</fullName>
        <inlineHelpText>Would it be OK if a Dell | Boomi sales representative contacts the customer?</inlineHelpText>
        <label>Reason for not contacting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This Opportunity is automatically generated from the conversion of the Referral Lead</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Referral Leads</relationshipLabel>
        <relationshipName>Referral_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SaaS_Qualifying_Description__c</fullName>
        <inlineHelpText>Is the customer using or planning to use any SaaS business applications such as Salesforce.com, Netsuite, Zuora, or Successfactors etc?</inlineHelpText>
        <label>SaaS Qualifying Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saas_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>Saas Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Unit_Name__c</fullName>
        <formula>Account__r.Sales_Channel__r.Segment_Business_Unit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment Business Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_to_Boomi__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please check this field to submit to the lead to Boomi sales</inlineHelpText>
        <label>Submit to Boomi?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Buyer__c</fullName>
        <inlineHelpText>Please let us know who will likely have the final say in the technical review of this initiative</inlineHelpText>
        <label>Technical Buyer?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>&quot;Customer&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_of_SaaS_business_applications__c</fullName>
        <inlineHelpText>Is the customer using or planning to use any SaaS business applications such as Salesforce.com, Netsuite, Zuora, or Successfactors etc?</inlineHelpText>
        <label>Use of SaaS business applications?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_existing_CRM__c</fullName>
        <inlineHelpText>Please tell us what your customer is using today to track their prospects, leads, customers, sales activity, &amp; pipeline/forecast.  Possible Answer: a specific CRM product like Act, MS Dynamics, Sage, Onyx etc., or if they are using Excel, Outlook etc.</inlineHelpText>
        <label>What is the existing CRM?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Referral Lead</label>
    <nameField>
        <displayFormat>RFL# {0000000000}</displayFormat>
        <label>Referral Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Leads</pluralLabel>
    <recordTypes>
        <fullName>Boomi_Lead</fullName>
        <active>true</active>
        <description>Use this to create a lead from your Account set for Boomi team</description>
        <label>Boomi Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cloud_Services</fullName>
        <active>false</active>
        <description>Use this to create a lead from your Account for Cloud Services(vCloud; StaaS)</description>
        <label>Cloud Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dell_Cloud_Business_Application</fullName>
        <active>true</active>
        <description>Use this to create a  lead from your Account for Dell Cloud Business Applications</description>
        <label>Dell Cloud Business  Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Secureworks_Lead</fullName>
        <active>false</active>
        <description>Use this to create a lead from your Account set for Secureworks team</description>
        <label>Secureworks Lead</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CLOUD_Referral_Lead_Read_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISPICKVAL(Boomi_Lead_Status__c, &apos;Created&apos;)), $User.ProfileId &lt;&gt; &apos;00e30000000nJ6K&apos;, $User.ProfileId &lt;&gt; &apos;00eA0000000hNqF&apos;, $RecordType.Id = &apos;012A0000000Vi16&apos; )</errorConditionFormula>
        <errorMessage>This lead has been submitted to Cloud Services and can no longer be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_uncheck_secureworks_checkbox</fullName>
        <active>false</active>
        <description>Once the field is checked, it shouldn&apos;t be unchecked.</description>
        <errorConditionFormula>AND(ISCHANGED( Can_Dell_Secureworks_contact_customer__c ), PRIORVALUE( Can_Dell_Secureworks_contact_customer__c )=TRUE)</errorConditionFormula>
        <errorDisplayField>Can_Dell_Secureworks_contact_customer__c</errorDisplayField>
        <errorMessage>This field shouldn&apos;t be unchecked once. it is checked and saved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DCBA_Referral_Lead_Read_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Boomi_Lead_Status__c,&apos;Created&apos;)), NOT(CONTAINS( $User.Profile_Name__c,&apos;Boomi Integration API Only&apos;)), RecordTypeId =&quot;012A0000000Vhyv&quot;)</errorConditionFormula>
        <errorMessage>This lead has been submitted to Dell Cloud Business Applications and can no longer be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R12_1_Cant_uncheck_submit_to_boomi_field</fullName>
        <active>true</active>
        <description>This field shouldn&apos;t be unchecked once it is checked and saved</description>
        <errorConditionFormula>AND(ISCHANGED(Submit_to_Boomi__c), PRIORVALUE(Submit_to_Boomi__c)=TRUE)</errorConditionFormula>
        <errorDisplayField>Submit_to_Boomi__c</errorDisplayField>
        <errorMessage>This field shouldn&apos;t be unchecked once it is checked and saved</errorMessage>
    </validationRules>
</CustomObject>